<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Chinese"
    tools:showIn="@layout/activity_chinese">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/yi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/yi"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/de"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/de"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/shi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/shi"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/bu"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/le"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/le"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ren"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/ren"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/wo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/wo"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/zai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/zai"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/you"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/you"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/ta"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/zhe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/zhe"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/zhong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/zhong"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/da"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/da"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/lai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:padding="15dp"
            android:text="@string/lai"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>