<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Preprimer"
    tools:showIn="@layout/activity_preprimer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <Button
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/a"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/and"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/and"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/away"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/away"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/big"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/big"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/blue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/blue"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/can"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/can"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/come"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/come"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/down"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/find"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/find"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/forword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/forword"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/funny"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/funny"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/go"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_transparent"
            android:fontFamily="@font/opendyslexic3_regular"
            android:padding="15dp"
            android:text="@string/go"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>